workloads/domains/my/base/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: my-api
  namespace: my
  labels:
    app: my-api
    domain: my
spec:
  host: my-api.my.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      http:
        http2MaxRequests: 3000
        maxRequestsPerConnection: 100
